fixed bug on mobile

--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
     margin: 0;
     font-family: 'Arial', sans-serif;
     background: linear-gradient(135deg, #ff9c5a 0%, #fd9999 100%);
+    margin: 0; height: 100%; overflow: hidden
 }
-
 .container {
     text-align: center;
     background: #fff;
